# ondemand-voice-pipelines

./: .env.example  .gitignore  Dockerfile  README.md  architecture.mmd  openapi.json  pyproject.toml  supabase_migration.sql
app/: config.py  dependencies.py  main.py
app/agents/: adversarial.py  base.py  baseline_graph_planner.py  claude_client.py  eval_curator.py  graph_revision.py  intent_schema.py  pipeline_evaluator.py  publishing.py
app/api/v1/: router.py
app/core/: exceptions.py
app/db/: client.py
app/db/repositories/: __init__.py  eval_dataset_repo.py  eval_repo.py  in_memory.py  invocation_repo.py  pipeline_artifact_repo.py  pipeline_build_step_repo.py  pipeline_repo.py
app/providers/asr/: base.py  deepgram.py  factory.py  sample.py  whisper.py
app/providers/intent/: base.py  claude_intent.py
app/schemas/: __init__.py  artifacts.py  invocation.py  pipeline.py
app/services/: graph_runner.py  orchestrator.py  pipeline_service.py
examples/voice_samples/: manifest.json
pitch/: 01-the-problem.md  02-the-architecture.md  03-the-agents.md  04-why-it-matters.md  voice-pipelines-pitch-deck.pptx
scripts/: demo_scenario.py  demo_state.py  run_local_demo_server.py  run_tmux_demo.py  run_video_demo.py  run_voice_sample_demo.py  tmux_demo_control.py  tmux_watch_detail.py  tmux_watch_list.py
tests/: conftest.py
tests/test_agents/: test_intent_schema.py
tests/test_endpoints/: test_pipelines.py  test_voice_sample_e2e.py
tests/test_providers/: test_asr_factory.py
tests/test_services/: test_graph_runner.py  test_orchestrator.py
(+1 files in other folders)
